Import Debian packaging from Debian project
The Debian packaging from the Debian project is better maintained (e.g.
it is lintian clean, has a proper copyright file, etc). Reduce the
differences by importing the Debian package from the Debian project.

Signed-off-by: Benjamin Drung <benjamin.drung@profitbricks.com>

--- a/debian/control
+++ b/debian/control
@@ -1,16 +1,25 @@
 Source: mstflint
 Section: net
-Priority: extra
-Maintainer: Gal Sivan <gsivan@unknown>
-Build-Depends: debhelper (>= 8.0.0), autotools-dev
-Standards-Version: 3.9.2
-Homepage: http://www.mellanox.com
-#Vcs-Git: git://git.debian.org/collab-maint/mstflint.git
-#Vcs-Browser: http://git.debian.org/?p=collab-maint/mstflint.git;a=summary
+Priority: optional
+Maintainer: Adham Masarwah <adham@mellanox.com>
+Build-Depends: debhelper (>= 9),
+               dh-autoreconf,
+               libibmad-dev,
+               libmuparser-dev,
+               libsqlite3-dev,
+               pkg-config,
+               zlib1g-dev
+Standards-Version: 4.1.3
+Vcs-Git: https://github.com/Mellanox/mstflint
+Vcs-Browser: https://github.com/Mellanox/mstflint
+Homepage: https://github.com/Mellanox/mstflint
 
 Package: mstflint
-Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Architecture: linux-any
+Depends: libibmad5,
+         ${misc:Depends},
+         ${shlibs:Depends}
 Description: Mellanox firmware burning application
- This package contains firmware update tool, vpd dump and register dump tools
- for network adapters based on Mellanox Technologies chips.
+ This package contains a burning tool and diagnostic tools for Mellanox
+ manufactured HCA/NIC cards. It also provides access to the relevant source
+ code.
