Replace INCLUDES by AM_CPPFLAGS
autoreconf complains:

```
warning: 'INCLUDES' is the old name for 'AM_CPPFLAGS' (or '*_CPPFLAGS')
```

Signed-off-by: Benjamin Drung <benjamin.drung@cloud.ionos.com>

--- a/adb_parser/Makefile.am
+++ b/adb_parser/Makefile.am
@@ -37,7 +37,7 @@
 DIST_SUBDIRS = .
 
 USER_DIR = ..
-INCLUDES = -I$(USER_DIR) -I$(USER_DIR)/common
+AM_CPPFLAGS = -I$(USER_DIR) -I$(USER_DIR)/common
 AM_CXXFLAGS = -Wall -W -g -MP -MD -Werror -pipe $(COMPILER_FPIC)
 
 lib_LTLIBRARIES = libadb_parser.a
