--- a/fw_comps_mgr/Makefile.am
+++ b/fw_comps_mgr/Makefile.am
@@ -42,7 +42,7 @@ UTILS_DIR = $(USER_DIR)/mft_utils
 MAD_IFC_DIR = $(USER_DIR)/mad_ifc
 TOOLS_RES_MGMT_DIR = $(USER_DIR)/tools_res_mgmt
 
-INCLUDES = -I. -I$(USER_DIR) -I$(MTCR_INC_DIR) -I$(MTCR_DIR) -I$(REG_ACCESS_DIR) -I$(CMDIF_DIR) \
+AM_CPPFLAGS = -I. -I$(USER_DIR) -I$(MTCR_INC_DIR) -I$(MTCR_DIR) -I$(REG_ACCESS_DIR) -I$(CMDIF_DIR) \
            -I$(COMMON_DIR) -I $(LAYOUTS_DIR) -I $(UTILS_DIR) -I$(TOOLS_RES_MGMT_DIR) 
 
 FWCOMPS_VERSION = 1
