--- a/xz_utils/Makefile.am
+++ b/xz_utils/Makefile.am
@@ -34,7 +34,7 @@
 
 USER_DIR = ..
 MTCR_DIR = $(USER_DIR)/${MTCR_CONF_DIR}
-INCLUDES = -I. -I$(USER_DIR) -I$(MTCR_DIR) -I$(USER_DIR)/common
+AM_CPPFLAGS = -I. -I$(USER_DIR) -I$(MTCR_DIR) -I$(USER_DIR)/common
 AM_CFLAGS = -W  -g -MP -MD ${COMPILER_FPIC}
 noinst_LTLIBRARIES = libxz_utils.a
 libxz_utils_a_SOURCES = xz_utils.c xz_utils.h
