Fix libtool libraries names
autoreconf complains:

```
mlxconfig/Makefile.am:66: error: 'libmlxcfg.a' is not a standard libtool library name
```

Libraries that are built with libtool should end with `.la`.

Signed-off-by: Benjamin Drung <benjamin.drung@cloud.ionos.com>

--- a/adb_parser/Makefile.am
+++ b/adb_parser/Makefile.am
@@ -40,5 +40,5 @@ USER_DIR = ..
 AM_CPPFLAGS = -I$(USER_DIR) -I$(USER_DIR)/common
 AM_CXXFLAGS = -Wall -W -g -MP -MD -Werror -pipe $(COMPILER_FPIC)
 
-lib_LTLIBRARIES = libadb_parser.a
-libadb_parser_a_SOURCES = adb_parser.h adb_parser.cpp buf_ops.h buf_ops.cpp expr.h expr.cpp adb_expr.h adb_expr.cpp adb_db.h adb_db.cpp
+lib_LTLIBRARIES = libadb_parser.la
+libadb_parser_la_SOURCES = adb_parser.h adb_parser.cpp buf_ops.h buf_ops.cpp expr.h expr.cpp adb_expr.h adb_expr.cpp adb_db.h adb_db.cpp
