--- a/xz_utils/Makefile.am
+++ b/xz_utils/Makefile.am
@@ -36,10 +36,10 @@ USER_DIR = ..
 MTCR_DIR = $(USER_DIR)/${MTCR_CONF_DIR}
 AM_CPPFLAGS = -I. -I$(USER_DIR) -I$(MTCR_DIR) -I$(USER_DIR)/common
 AM_CFLAGS = -W  -g -MP -MD ${COMPILER_FPIC}
-noinst_LTLIBRARIES = libxz_utils.a
-libxz_utils_a_SOURCES = xz_utils.c xz_utils.h
+noinst_LTLIBRARIES = libxz_utils.la
+libxz_utils_la_SOURCES = xz_utils.c xz_utils.h
 
-libxz_utils_a_DEPENDENCIES =
-libxz_utils_a_LIBADD =  -llzma
+libxz_utils_la_DEPENDENCIES =
+libxz_utils_la_LIBADD = -llzma
 
 libraryincludedir=$(includedir)/mstflint/xz_utils/
